[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"  # Specify the resolver version that matches edition 2021

members = ["crates/gateway"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0"
starknet_api = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
assert_matches = "1.5.0"
