[workspace]
resolver = "2"
members = ["crates/gateway"]

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/starkware-libs/mempool/"
license = "Apache-2.0"

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[workspace.lints.clippy]
as_conversions = "deny"

[workspace.dependencies]
assert_matches = "1.5.0"
hyper = "0.13.9"
tokio = { version = "0.2", features = ["macros"] }
thiserror = "1.0"
