[workspace]
resolver = "2"
members = ["crates/gateway", "crates/mempool_node", "crates/task_executor"]

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/starkware-libs/mempool/"
license = "Apache-2.0"

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[workspace.lints.clippy]
as_conversions = "deny"

[workspace.dependencies]
assert_matches = "1.5.0"
axum = "0.6.12"
clap = { version = "4.3.10" }
futures = "0.3.30"
hyper = "1.2.0"
papyrus_config = "0.3.0"
pretty_assertions = "1.4.0"
rstest = "0.17.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
# TODO(Arni, 1/5/2024): Use a fixed version once the StarkNet API is stable.
starknet_api = { git = "https://github.com/starkware-libs/starknet-api.git", rev = "6b14aaf" }
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tower = "0.4.13"
validator = "0.12"
