[package]
name = "starknet_gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert_matches.workspace = true
hyper.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
