[package]
name = "starknet_gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[dependencies]
hyper.workspace = true
tokio.workspace = true
thiserror.workspace = true

[lints]
workspace = true
