[package]
name = "starknet_mempool"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
starknet_api.workspace = true
starknet_mempool_common = { path = "../mempool_common", version = "0.0" }
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tokio.workspace = true
