[package]
name = "starknet_mock_batcher"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
starknet_api.workspace = true
starknet_mempool = { path = "../mempool", version = "0.0" }
starknet_mempool_types = { path = "../mempool_types", version = "0.0" }
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
starknet_mempool_infra = { path = "../mempool_infra", version = "0.0" }
