[package]
name = "starknet_mempool_integration_tests"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dev-dependencies]
axum.workspace = true
hyper.workspace = true
mempool_infra = { path = "../mempool_infra", version = "0.0" }
pretty_assertions.workspace = true
rstest.workspace = true
serde_json.workspace = true
starknet_api.workspace = true
starknet_gateway = { path = "../gateway", version = "0.0" }
starknet_mempool = { path = "../mempool", version = "0.0" }
starknet_mempool_types = { path = "../mempool_types", version = "0.0" }
thiserror.workspace = true
tokio.workspace = true
